force-app/main/default/objects/DOZISF__ZoomInfo_Intent__c/DOZISF__ZoomInfo_Intent__c.object-meta.xml
<CustomObject>
    <label>ZoomInfo Intent</label>
    <nameField>
        <displayFormat>I-{0000}</displayFormat>
        <label>ZoomInfo Intent Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ZoomInfo Intent</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>