force-app/main/default/objects/DOZISF__ZoomInfo_Intent__c/fields/DOZISF__Account__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ZoomInfo Intent</relationshipLabel>
    <relationshipName>Zoominfo_Intent</relationshipName>
    <type>Lookup</type>
</CustomField>