force-app/main/default/objects/DOZISF__ZoomInfo_Intent__c/fields/DOZISF__Categories__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Categories__c</fullName>
    <label>Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>