force-app/main/default/objects/DOZISF__ZoomInfo_Intent__c/fields/DOZISF__Intent_ID__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Intent_ID__c</fullName>
    <label>Intent ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>