force-app/main/default/objects/DOZISF__ZoomInfo_Intent__c/fields/DOZISF__Signal_Date__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Signal_Date__c</fullName>
    <label>Signal Date</label>
    <type>Date</type>
</CustomField>