force-app/main/default/objects/DOZISF__ZoomInfo_Intent__c/fields/DOZISF__Spikes_in_Date_Range__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Spikes_in_Date_Range__c</fullName>
    <label>Spikes in Date Range</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>