force-app/main/default/objects/DOZISF__ZoomInfo_Intent__c/fields/DOZISF__Surge_Score__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Surge_Score__c</fullName>
    <label>Signal Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>