force-app/main/default/objects/DOZISF__ZoomInfo_Intent__c/fields/DOZISF__Topic__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Topic__c</fullName>
    <label>Topic</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>