force-app/main/default/objects/DOZISF__ZoomInfo_Intent__c/listViews/DOZISF__All.listView-meta.xml
<ListView>
    <fullName>DOZISF__All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>DOZISF__Account__c</columns>
    <columns>DOZISF__Topic__c</columns>
    <columns>DOZISF__Categories__c</columns>
    <columns>DOZISF__Surge_Score__c</columns>
    <columns>DOZISF__Change_in_Surge_Score__c</columns>
    <columns>DOZISF__Intent_ID__c</columns>
    <columns>DOZISF__ZoomInfo_External_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>